hphp/test/slow/inout/bad-call-5.php.expectf

Fatal error: syntax error, unexpected T_OBJECT_OPERATOR, expecting ')' in %s/bad-call-5.php on line 3
